--- a/css/cover.css
+++ b/css/cover.css
@@ -23,7 +23,7 @@
 
 .cb-slideshow:after { 
     content: '';
-    background: transparent url(../images/llanos.png) repeat top left; 
+    background: transparent url(../Imagenes/Fondo13.jpg) repeat top left; 
 }
 
 .cb-slideshow li span { 
@@ -315,32 +315,18 @@
   .cb-slideshow li div h3 { font-size: 80px }
 }
 
-a,
-a:focus,
-a:hover {
-  color: #fff;
-}
+
 
 .btn-secondary,
 .btn-secondary:hover,
 .btn-secondary:focus {
-
-  outline: none;
-      background: accent;
-      width: 100%;
-      border: 0;
-      border-radius: 4px;
-      padding: 12px 380px;
+  
       color: white;
       font-family: inherit;
-      font-size: inherit;
-      font-weight: semibold;
-      line-height: inherit;
-      text-transform: uppercase;
-      cursor: pointer;
       background: rgb(235, 87, 87);
-      color: accent;
-      float:center;
+      position: center;
+      float: center;
+
 }
 
 .btn {
@@ -356,7 +342,6 @@ a:hover {
       font-size: inherit;
       font-weight: semibold;
       line-height: inherit;
-      text-transform: uppercase;
       cursor: pointer;
       background: rgb(235, 87, 87);
       color: accent;
@@ -420,7 +405,7 @@ h1 {
   margin-left: auto;
   margin-right: auto;
   max-width: 80%;
-  height: 580px;
+  height: 520px;
   width: 100000px;
   background: rgba(255, 255, 255, 0.726);
 	border-radius: 20px 20px 20px 20px;
