--- a/css/demo.css
+++ b/css/demo.css
@@ -29,6 +29,7 @@ input{
 	padding:3px 5px 4px;
 	color:#979797;
 	width:190px;
+	float: center;
 }
 address,caption,cite,code,dfn,th,var {
 	font-style:normal;
